--- a/chat-now-webapp/src/index.css
+++ b/chat-now-webapp/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  border: 0 none;
+  outline: 0;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 @layer base {
   @font-face {
     font-family: "Nunito";
